# vocal

./: .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json
.github/workflows/: release.yml
examples/: index.ts
src/: cli.ts  index.ts  main.c  types.ts  vocal.h  vocal_common.h  vocal_model.c  vocal_model.h
src/asr/: audio_encoder.cpp  audio_encoder.h  gguf_loader.cpp  gguf_loader.h  mel_spectrogram.cpp  mel_spectrogram.h  qwen3_asr.cpp  qwen3_asr.h  text_decoder.cpp  text_decoder.h  vocal_asr_bridge.cpp
src/audio/: audio_io.c  audio_io.h
src/server/: vocal_server.cpp  vocal_server.h
src/tts/: gguf_loader.cpp  gguf_loader.h  tts.cpp  tts.h  tts_codec.cpp  tts_codec.h  tts_common.cpp  tts_common.h  tts_encoder.cpp  tts_encoder.h  tts_model.cpp  tts_model.h  tts_tokenizer.cpp  tts_tokenizer.h  tts_types.h  vocal_tts_bridge.cpp  voice_profile.cpp  voice_profile.h
tools/: convert_all.py  convert_asr_to_gguf.py  convert_codec_to_gguf.py  convert_decoder_to_gguf.py  convert_tts_to_gguf.py  requirements.txt
